<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/itemNavHome" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_menu_history"
            android:title="@string/itemNavHistory" />

        <item
            android:id="@+id/nav_rules"
            android:icon="@drawable/ic_menu_rules"
            android:title="@string/itemNavRules" />

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_menu_profile"
            android:title="@string/itemNavProfile" />
        <item
            android:id="@+id/nav_signOut"
            android:icon="@drawable/ic_menu_signOut"
            android:title="@string/itemNavSignOut" />
    </group>



</menu>
