<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.nativos.forumriu.AboutUsFragment"
    android:background="@drawable/aboutus">

    <!-- TODO: Update blank fragment layout -->


    <TextView
        android:layout_below="@+id/textViewS4UMission"
        android:text="@string/S4Uinfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewS4UMissionInfo"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        android:textAlignment="center" />

    <TextView
        android:text="@string/S4U"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:id="@+id/textViewS4U"
        android:textSize="40sp"
        android:textAlignment="center"
        android:textStyle="normal|bold"
        android:textColor="@android:color/white"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/S4UMission"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewS4UMission"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:textAlignment="center"
        android:textStyle="normal|bold"
        android:layout_below="@+id/textViewS4U"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
