<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sign_in"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.nativos.forumriu.SignIn"
    android:background="@drawable/login">

    <TextView
        android:text="Hola"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/jasonTextView"
        android:textColor="#0F7F41"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="170dp"
        />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/emailTIL"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_above="@+id/passwordTIL">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/emailText"
            android:layout_marginBottom="13dp"
            android:hint="@string/prompt_email"
            android:layout_above="@+id/passwordTIL"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/passwordTIL"
        android:layout_above="@+id/loginButton"
        >
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="34dp"
            android:id="@+id/passwordText"
            android:hint="@string/prompt_password"
            />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="115dp"
        android:id="@+id/loginButton"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:backgroundTint="#0F7F41"
        android:textColor="@android:color/white"
        android:text="@string/loginButton"
        />

    <TextView
        android:text="@string/ForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ForgotPasswordTextView"
        android:textColor="#0F7F41"
        android:layout_below="@+id/passwordTIL"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="63dp"
        android:onClick="goToForgotPassword" />

    <TextView
        android:text="@string/SignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/SignUpTextView"
        android:textColor="#0F7F41"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="29dp"
        android:onClick="goToSignUp"/>



</RelativeLayout>
