<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileFragment"
    >
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="170dp"
        app:srcCompat="@drawable/profile"
        android:id="@+id/imageViewEditProfile"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editProfileNameTIL"
        android:layout_below="@id/imageViewEditProfile"
        >
        <EditText
            android:drawableLeft="@drawable/ic_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/prompt_name"
            android:ems="10"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:id="@+id/editTextProfileName" />

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editProfileLastNameTIL"
        android:layout_below="@+id/editProfileNameTIL"
        >
        <EditText
            android:drawableLeft="@drawable/ic_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:hint="@string/prompt_lastname"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:id="@+id/editTextProfileLastName"
            android:selectAllOnFocus="false" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editProfileLastName2TIL"
        android:layout_below="@+id/editProfileLastNameTIL"
        >
        <EditText
            android:drawableLeft="@drawable/ic_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:hint="@string/prompt_lastname2"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:id="@+id/editTextProfileLastName2" />

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editProfilePasswordTIL"
        android:layout_below="@+id/editProfileLastName2TIL"
        >
        <EditText
            android:drawableLeft="@drawable/ic_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:hint="@string/prompt_password"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:id="@+id/editTextProfilePassword" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editProfileConfirmPasswordTIL"
        android:layout_below="@+id/editProfilePasswordTIL"
        >

        <EditText
            android:drawableLeft="@drawable/ic_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:hint="@string/prompt_confirmPassword"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:id="@+id/editTextProfileConfirmPassword" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonEditProfile"
        android:backgroundTint="#0F7F41"
        android:textColor="@android:color/white"
        android:text="@string/editProfileButton"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/editProfileConfirmPasswordTIL"/>



</RelativeLayout>
