<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_question"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.nativos.forumriu.QuestionActivity">


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/questionTIL"
        android:layout_below="@+id/textViewQuestion"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="90dp">

        <EditText
            android:drawableLeft="@drawable/ic_pen_icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/editTextMultilineQuestion"
            android:hint="@string/questionHint"
            android:background="@drawable/edittext_rounded"
            />


    </android.support.design.widget.TextInputLayout>



    <Button
        android:drawableLeft="@drawable/ic_menu_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ButtonSendQuestion"
        android:backgroundTint="#0F7F41"
        android:textColor="@android:color/white"
        android:text="@string/sendQuestionButton"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/questionTIL"
        />

    <TextView
        android:text="@string/QuestionsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:id="@+id/textViewQuestion"
        android:textStyle="normal|bold"
        android:textSize="18sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
